updated application documentation and swagger. removed blumix artifacts
