# openidl-utilities/public/openapi.yaml
@@ -3,18 +3,40 @@ info:
  title: 'HIG User Enrollment API(s) '
  version: '1.0.0'
  description: >-
-   > This interface enables the testers to quickly test the API(s) developed by the Dev Team. If you dont have your token  then first generate the token.
-   for testing the API(S).
+   > This interface enables the testers to quickly test the API(s) developed by the Dev Team. 
+   If you dont have your token  then first generate the token using 'app-user-login' for testing the API(S).
 paths:
+  "/openidl/api/app-user-login":
+    post:
+      tags:
+        - app-user-login
+      description: User log-in with Identity Provider.
+      summary: User log-in with Identity Provider.
+      responses:
+        '200':
+          description: 'User log-in with Identity Provide.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/postResponse'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userLogin'
+        required: true
+      security:
+        - bearerAuth: []
+
   "/openidl/api/app-user-enrollment":
     post:
       tags:
         - app-user-creation
-      description: Registers app user into cloud directory.
-      summary: Registers app user into cloud directory.
+      description: Registers app user into identity provider.
+      summary: Registers app user into identity provider.
       responses:
         '200':
-          description: 'Registers app user into cloud directory'
+          description: 'Registers app user into identity provider'
           content:
             application/json:
               schema:
@@ -28,6 +50,27 @@ paths:
       security:
         - bearerAuth: []
 
+  "/openidl/api/app-user-attributes":
+    post:
+      tags:
+        - app-user-attributes
+      description: Updates app user attributes.
+      summary: Updates app user attributes.
+      responses:
+        '200':
+          description: 'Updates app user attributes'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/postResponse'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userAttributeData'
+        required: true
+      security:
+        - bearerAuth: []
 
   "/openidl/api/fabric-user-enrollment":
     post:
@@ -53,19 +96,98 @@ paths:
 
 components:
   schemas:
-    "userData":
+    "userLogin":
       type: object
       properties:
-        directory:
+        username:
           type: string
-          example: "cloud_directory"
-        authKey:
+          example: "test_username"
+        password:
           type: string
-          example: "wiueewruwq-eueuuwiueiw"
-        users:
-          type: array
-          items:
-            $ref: '#definitions/appUser'
+          example: "test_password"
+    "userData":
+      type: object
+      properties: 
+        users: 
+          type: "array"
+          items: 
+            type: "object"
+            properties: 
+              username: 
+                type: "string"
+                example: "test_user1"
+              password: 
+                type: "string"
+                example: "test_user1@blockchain"
+              familyName: 
+                type: "string"
+                example: "test"
+              givenName: 
+                type: "string"
+                example: "user1"
+              email: 
+                type: "string"
+                example: "test_user1@regulator.com"
+              attributes: 
+                required: 
+                  - "custom:stateName"
+                  - "custom:stateCode"
+                  - "custom:role"
+                  - "custom:organizationId"
+                properties: 
+                  custom:stateName: 
+                    type: "string"
+                    example: "Alabama"
+                  custom:stateCode: 
+                    type: "string"
+                    example: "01"
+                  custom:role: 
+                    type: "string"
+                    example: "regulator"
+                  custom:organizationId: 
+                    type: "string"
+                    example: "1235"
+                type: "object"
+    "userAttributeData":
+      type: object
+      properties: 
+        users: 
+          type: "array"
+          items: 
+            type: "object"
+            properties: 
+              username: 
+                type: "string"
+                example: "test_user1"
+              familyName: 
+                type: "string"
+                example: "test"
+              givenName: 
+                type: "string"
+                example: "user1"
+              email: 
+                type: "string"
+                example: "test_user1@regulator.com"
+              attributes: 
+                required: 
+                  - "custom:stateName"
+                  - "custom:stateCode"
+                  - "custom:role"
+                  - "custom:organizationId"
+                properties: 
+                  custom:stateName: 
+                    type: "string"
+                    example: "Alabama"
+                  custom:stateCode: 
+                    type: "string"
+                    example: "01"
+                  custom:role: 
+                    type: "string"
+                    example: "regulator"
+                  custom:organizationId: 
+                    type: "string"
+                    example: "1235"
+                type: "object"
     "fabricUserData":
       type: object
       properties:
@@ -114,43 +236,6 @@ definitions:
         type: array
         items:
           $ref: '#/definition/attr'  
-  appUser:
-    type: object
-    properties:
-      name:
-        type: object
-        properties:
-          givenName:
-            type: string
-            example: "john"
-          familyName:
-            type: string
-            example: "blockchain"
-      emails:
-        type: array
-        items:
-          $ref: '#/definition/email'
-      userName:
-        type: string
-        example: "john@email.com"
-      password:
-        type: string
-        example: "john@blockchain"
-      status:
-        type: string
-        example: "CONFIRMED"
-      profile:
-        type: object
-        properties:
-          attributes:
-            type: object
-            properties:
-              role:
-                type: string
-                example: "carrier"
-              organizationId:
-                type: string
-                example: "67856"
 definition:
   attr:
     type: object
@@ -162,14 +247,5 @@ definition:
         type: string
         example: "carrier"
       ecert:
-        type: boolean
-        example: true
-  email:
-    type: object
-    properties:
-      value:
-        type: string
-        example: "john@email.com"
-      primary:
         type: boolean
         example: true
